Fix checkbox text misalignment

--- a/war/src/main/less/modules/form.less
+++ b/war/src/main/less/modules/form.less
@@ -374,7 +374,7 @@
 
 .jenkins-checkbox {
   position: relative;
-  display: inline-block;
+  display: inline-flex;
 }
 
 .jenkins-checkbox input {
